--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Index.cshtml
@@ -35,6 +35,8 @@
             <table class="table table-bordered align-middle">
                 <thead class="table-primary text-center">
                     <tr>
+                        <th style="width: 50px;"><input type="checkbox" id="checkAll" /></th>
+
                         <th>STT</th>
                         <th>Mã Lớp Học</th>
                         <th>Tên Lớp Học</th>
