--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/Shared/_MainAdminLayout.cshtml
@@ -154,7 +154,7 @@
 
                             <!-- Các mục còn lại không đổi -->
                             <a href="@Url.Action("Index", "DiemDanhHocVien")" class="nav-item nav-link">
-                                <i class="fas fa-check-circle me-2"></i>Điểm danh Học Viên
+                                <i class="fas fa-check-circle me-2"></i>Điểm danh Lớp Học
                             </a>
                             <a href="@Url.Action("Index", "DiemDanhGiangVien")" class="nav-item nav-link">
                                 <i class="fas fa-check-circle me-2"></i>Điểm danh Giảng Viên
