--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/DiemDanhHocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/DiemDanhHocVien/Index.cshtml
@@ -21,7 +21,7 @@
         <div id="lopHocListContainer" class="d-flex flex-wrap gap-2 justify-content-center mt-2 mb-3"></div>
 
     </div>
-    <div class="bg-light rounded p-4 shadow-sm">
+    <div class="p-4">
 
         <!-- Danh sách buổi học của lớp được chọn -->
         <div id="buoiHocContainer" class="mb-3"></div>
