--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
@@ -27,6 +27,7 @@
                 <thead class="table-light">
                     <tr>
                         <th style="width: 50px;"><input type="checkbox" id="checkAll" /></th>
+                        <th>STT</th>
                         <th>Mã Học Viên</th>
                         <th>Họ và Tên</th>
                         <th>Ngày Sinh</th>
@@ -37,12 +38,13 @@
                     </tr>
                 </thead>
                 <tbody>
+                    @{ int stt = 1;}
                     @{
-                        int stt = 1;
                         foreach (var hv in Model)
                         {
                             <tr>
                                 <td><input type="checkbox" class="check-item" value="@hv.HocVienId" /></td>
+                                 <td>@stt</td>
                                 <td>@hv.MaHocVien</td>
                                 <td>@hv.HoVaTen</td>
                                 <td>@hv.NgaySinh.ToShortDateString()</td>
@@ -51,7 +53,7 @@
                                 <td>@hv.CoQuanLamViec</td>
 
                                 <td>
-                                    <a href="@Url.Action("Details", new { id = hv.HocVienId})" class="btn btn-sm btn-primary">
+                                    <a href="@Url.Action("Details", new { id = hv.HocVienId})" class="btn btn-sm btn-info">
                                         <i class="fas fa-eye"></i>
                                     </a>
 
@@ -64,6 +66,7 @@
                                 </td>
                             </tr>
                             stt++;
+
                         }
                     }
                 </tbody>
@@ -85,11 +88,7 @@
     </div>
 </div>
 <script>
-    // Check all
-    $("#checkAll").click(function () {
-        $(".check-item").prop('checked', $(this).prop('checked'));
-        toggleDeleteButton();
-    });
+
 
     // Toggle delete button
     $(".check-item").on('change', function () {
